<resources>
    <string name="app_name">Gallerio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LogIn</string>
    <string name="text11">Welcome Back, kindly fill email id and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginbtn">Get Me In!</string>
    <string name="text12">New Here! Register Now!</string>
    <string name="timeline">Timeline</string>
    <string name="home">home</string>
    <string name="profile">Profile</string>
    <string name="signup">SignUp</string>
    <string name="text13">Howdy! Kindly Register!</string>
    <string name="name">Name</string>
    <string name="register_me">Register Me!</string>
    <string name="gotologinpagetxt">Already have Account! Click Here!</string>
    <string name="confirm_passowrd">Confirm Passowrd</string>
    <string name="phno">Mobile No.</string>
    <string name="update_profile_pic">Update Profile pic</string>
    <string name="forget_password">forget password</string>
    <string name="send_mail_to_reset_password">Send mail to reset password</string>
    <string name="add_image">Add Image</string>
    <string name="add_profile_image">Add Profile Image</string>
    <string name="logo">logo</string>
    <string name="img">img</string>
    <string name="title">Title</string>
    <string name="user_name">User Name</string>
    <string name="logout">Logout</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="cancel">cancel</string>
    <string name="add">Add</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="category_name">Category Name</string>
    <string name="_8942">⋮</string>
</resources>
