<?xml version="1.0" encoding="utf-8"?>
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/gradient"
    tools:context=".Signup">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:gravity="center"
    android:id="@+id/logo"
    android:contentDescription="@string/app_name"
    android:src="@drawable/logo" />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_below="@+id/logo"
android:layout_alignParentStart="true"
android:layout_alignParentEnd="true"
android:fontFamily="@font/almendra_bold"
android:gravity="center"
android:text="@string/signup"
android:id="@+id/signuptxt2"
android:textSize="40sp"
android:textStyle="bold" />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_below="@id/signuptxt2"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:textSize="17sp"
    android:id="@+id/text3"
    android:text="@string/text13"
    android:fontFamily="@font/almendra_bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:id="@+id/name"
        android:autofillHints=""
        android:padding="5dp"
        android:textSize="20sp"
        android:background="@drawable/border"
        android:gravity="center"
        android:inputType="textPersonName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/name"
    android:layout_marginStart="30dp"
        android:autofillHints=""
    android:layout_marginEnd="30dp"
    android:layout_marginTop="20dp"
    android:hint="@string/email"
    android:textColor="#fff"
    android:textColorHint="#fff"
    android:id="@id/email"
    android:padding="5dp"
    android:textSize="20sp"
    android:background="@drawable/border"
    android:gravity="center"
    android:inputType="textEmailAddress"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:autofillHints=""
        android:hint="@string/phno"
        android:id="@+id/phno"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:background="@drawable/border"
        android:gravity="center"
        android:textSize="20sp"
        android:inputType="phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />


    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/phno"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginTop="20dp"
    android:padding="5dp"
        android:autofillHints=""
    android:hint="@string/password"
    android:id="@+id/pass"
    android:textColor="#fff"
    android:textColorHint="#fff"
    android:background="@drawable/border"
    android:gravity="center"
    android:textSize="20sp"
    android:inputType="textPassword"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
        />

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_below="@id/pass"
    android:layout_marginStart="40dp"
    android:background="#FBA40D"
    android:fontFamily="@font/almendra_bold"
    android:textSize="30sp"
    android:text="@string/register_me"
    android:id="@+id/registerbtn"
    android:textColor="#fff"
    android:layout_marginEnd="40dp"
        />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/signintxt"
    android:layout_below="@id/registerbtn"
    android:layout_marginTop="20dp"
    android:text="@string/gotologinpagetxt"
    android:gravity="center"
    android:textSize="17sp"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:fontFamily="@font/almendra_bold"
    android:textColor="#fff"/>

    </RelativeLayout>