<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/gradient"
    tools:context=".Login">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/almendra_bold"
        android:gravity="center"
        android:text="@string/login"
        android:id="@+id/logintxt"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/logintxt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="17sp"
        android:id="@+id/text1"
        android:text="@string/text11"
        android:fontFamily="@font/almendra_bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:id="@id/email"
        android:padding="5dp"
        android:textSize="20sp"
        android:background="@drawable/border"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="20sp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="130dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/forget"
        android:layout_marginStart="40dp"
        android:background="#FBA40D"
        android:fontFamily="@font/almendra_bold"
        android:textSize="30sp"
        android:text="@string/loginbtn"
        android:id="@+id/loginbtn"
        android:textColor="#fff"
        android:layout_marginEnd="40dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signuptxt"
        android:layout_below="@id/loginbtn"
        android:layout_marginTop="20dp"
        android:text="@string/text12"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/almendra_bold"
        android:textColor="#fff"/>

    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signuptxt"

        />


</RelativeLayout>